src/styles/TipStyles.module.css
.TipStyles {
  border-bottom: 2px solid var(--yellow);
  margin-bottom: 2rem;
  /* display: grid; */
  grid-template-columns: 400px 1fr;
  align-items: center;
  border: 2px solid black;
  margin-bottom: 5rem;
  position: relative;
  /* padding: 2rem; */
  grid-gap: 2rem;
  /* background: var(--blackGrit); */
  background-size: 550px;
  @media (max-width: 800px) {
    grid-template-columns: 1fr;
  }
  .tipContent {
    align-self: stretch;
    display: grid;
    align-content: start;
  }
  p {
    font-size: 2rem;
    line-height: 1.7;
    &:first-of-type {
      margin-top: 0 !important;
    }
  }
  .tipMeta {
    margin-top: -45px;
    @media (max-width: 800px) {
      margin-top: -20px;
    }
  }
}

.TipContent {
  padding: 0 2rem 2rem 2rem;
}

.TipStylesNoMedia {
  p {
    font-size: 3rem;
  }
}

.TipMetaStyles {
  font-size: 1.2rem;
  border-top: 0;
  border-bottom: 0;
  margin: 10px 0;
  /* transform: rotate(-1deg); */
  &:after {
    display: block;
    content: "";
    width: 100%;
    height: 100%;
    position: absolute;
    background: var(--whiteGrit) top left, var(--whiteGrit) bottom right;
    background-size: 550px;
    pointer-events: none;
  }
  & > * {
    flex: auto;
    &:before {
      content: "";
    }
  }
  a {
    text-decoration: none;
    color: rgba(0, 0, 0, 0.5);
  }
  svg {
    margin-right: 2px;
  }
  .twitter {
    fill: #1da1f2;
  }
}

